--- a/Semana_6_e_7.ipynb
+++ b/Semana_6_e_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8HWstYFPCNGZO5VO7qgtv",
+      "authorship_tag": "ABX9TyM7Q4OTpmT20Qf/gZtMgZOm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,7 +165,7 @@
         "id": "-NN_oFy6GM9C",
         "outputId": "da4d56d4-7f13-4165-9471-72c5a5933ac4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#1 - Escreva um loop que percorra os números de 1 a 50 e imprima \"Fizz\" para múltiplos de 3, \"Buzz\" para múltiplos de 5 e \"FizzBuzz\" para múltiplos de ambos.\n"
+        "#11 - Escreva um loop que percorra os números de 1 a 50 e imprima \"Fizz\" para múltiplos de 3, \"Buzz\" para múltiplos de 5 e \"FizzBuzz\" para múltiplos de ambos.\n",
+        "for i in range(1,51): #Para no 51 (1 a 50)\n",
+        "  if i%3 == 0 and i%5==0: #Se divisível por 3 e 5\n",
+        "    print('FizzBuzz')\n",
+        "  elif i%3==0: #se divisível apenas por 3\n",
+        "    print('Fizz')\n",
+        "  elif i%5==0: #se divisível apenas por 5\n",
+        "    print('Buzz')\n",
+        "  else: #Se não for divisível por ninguém\n",
+        "    print(i)\n"
       ],
       "metadata": {
         "id": "mwEy70tUGNFB"
@@ -207,18 +216,47 @@
     {
       "cell_type": "code",
       "source": [
-        "#1 - Utilize um for e in para contar quantas vogais existem em uma string fornecida pelo usuário.\n"
+        "#12 - Utilize um for e in para contar quantas vogais existem em uma string fornecida pelo usuário.\n",
+        "habla = input('Habla conmigo: ') #Leitura da palavra desejada\n",
+        "contador = 0 #contador de vogais começando de zero\n",
+        "for i in range(len(habla)): #para i até o tamanho da palavra\n",
+        "  if habla[i].lower() in 'aeiou': #se a letra em minusculo está em 'aeiou'\n",
+        "    contador+=1 #incrementa a quantidade de vogais\n",
+        "print(f'A palavra possui {contador} vogais!') #resposta final\n"
       ],
       "metadata": {
-        "id": "MP8TYnxiGNIi"
+        "id": "MP8TYnxiGNIi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7172ad46-65ec-45f5-978f-b3f8267ca6cb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Habla conmigo: aeiou\n",
+            "A palavra possui 5 vogais!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#1 - Crie um jogo de adivinhação onde o computador escolhe um número entre 1 e 100 e o usuário deve adivinhar. O programa deve dar dicas se o número é maior ou menor.\n"
+        "#13 - Crie um jogo de adivinhação onde o computador escolhe um número entre 1 e 100 e o usuário deve adivinhar. O programa deve dar dicas se o número é maior ou menor.\n",
+        "import random\n",
+        "sorteio = random.randint(1,101)\n",
+        "while True:\n",
+        "  palpite = int(input('Digite seu palpite:'))\n",
+        "  if palpite < sorteio:\n",
+        "    print('O número sorteado é maior!')\n",
+        "  elif palpite > sorteio:\n",
+        "    print('O número sorteado é menor!')\n",
+        "  else:\n",
+        ""
       ],
       "metadata": {
         "id": "aVndfongGNQi"
@@ -229,7 +267,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#1 - Escreva um programa que utilize while e continue para exibir apenas os números ímpares de 1 a 30.\n"
+        "#14 - Escreva um programa que utilize while e continue para exibir apenas os números ímpares de 1 a 30.\n"
       ],
       "metadata": {
         "id": "f_EbF4iTGNUp"
@@ -240,7 +278,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#1 - Crie uma tabela de multiplicação de 1 a 10 utilizando loops aninhados."
+        "#15 - Crie uma tabela de multiplicação de 1 a 10 utilizando loops aninhados."
       ],
       "metadata": {
         "id": "umOcba7-Gdl7"
