--- a/Semana_6_e_7.ipynb
+++ b/Semana_6_e_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Q4OTpmT20Qf/gZtMgZOm",
+      "authorship_tag": "ABX9TyP60ovSt5VI3YTTpGIO/7XA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,22 +247,47 @@
       "cell_type": "code",
       "source": [
         "#13 - Crie um jogo de adivinhação onde o computador escolhe um número entre 1 e 100 e o usuário deve adivinhar. O programa deve dar dicas se o número é maior ou menor.\n",
-        "import random\n",
-        "sorteio = random.randint(1,101)\n",
-        "while True:\n",
-        "  palpite = int(input('Digite seu palpite:'))\n",
-        "  if palpite < sorteio:\n",
+        "import random #importa a biblioteca de número randomicos (aleatórios)\n",
+        "sorteio = random.randint(1,101) #Define que os números sorteados são de 1 a 100\n",
+        "\n",
+        "while True: #Enquanto não achar o valor correto\n",
+        "  palpite = int(input('Digite seu palpite:')) #lê o palpite\n",
+        "  if palpite < sorteio: #se o palpite for menor que o sorteado\n",
         "    print('O número sorteado é maior!')\n",
-        "  elif palpite > sorteio:\n",
+        "  elif palpite > sorteio:#se o palpite for maior que o sorteado\n",
         "    print('O número sorteado é menor!')\n",
-        "  else:\n",
-        ""
+        "  else: #Se acertar o palpite\n",
+        "    print('Parabéns! Congratulations!')\n",
+        "    break #Para de rodar o loop while\n"
       ],
       "metadata": {
-        "id": "aVndfongGNQi"
+        "id": "aVndfongGNQi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dea54557-619e-4eae-8805-ddece6096ffd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu palpite:12\n",
+            "O número sorteado é maior!\n",
+            "Digite seu palpite:99\n",
+            "O número sorteado é menor!\n",
+            "Digite seu palpite:50\n",
+            "O número sorteado é menor!\n",
+            "Digite seu palpite:25\n",
+            "O número sorteado é menor!\n",
+            "Digite seu palpite:15\n",
+            "O número sorteado é maior!\n",
+            "Digite seu palpite:20\n",
+            "Parabéns! Congratulations!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
