--- a/Semana_6_e_7.ipynb
+++ b/Semana_6_e_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP60ovSt5VI3YTTpGIO/7XA",
+      "authorship_tag": "ABX9TyM5EHTxhPp2I/TEGEn/AsOs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,24 +292,192 @@
     {
       "cell_type": "code",
       "source": [
-        "#14 - Escreva um programa que utilize while e continue para exibir apenas os números ímpares de 1 a 30.\n"
+        "#14 - Escreva um programa que utilize while e continue para exibir apenas os números ímpares de 1 a 30.\n",
+        "i = 0\n",
+        "while i<30 :\n",
+        "  i+=1\n",
+        "  if i%2==0:\n",
+        "    continue\n",
+        "  print(i)"
       ],
       "metadata": {
-        "id": "f_EbF4iTGNUp"
+        "id": "f_EbF4iTGNUp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ca11d16-ba80-41a4-bbe1-806a3c8775b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n",
+            "11\n",
+            "13\n",
+            "15\n",
+            "17\n",
+            "19\n",
+            "21\n",
+            "23\n",
+            "25\n",
+            "27\n",
+            "29\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#15 - Crie uma tabela de multiplicação de 1 a 10 utilizando loops aninhados."
+        "#15 - Crie uma tabela de multiplicação de 1 a 10 utilizando loops aninhados.\n",
+        "for i in range(1,11):\n",
+        "  print(f'Tabuada de {i}:')\n",
+        "  for j in range(1,11):\n",
+        "    print(f'{i} x {j} = {i*j}')\n",
+        "  print('-------------------')"
       ],
       "metadata": {
-        "id": "umOcba7-Gdl7"
+        "id": "umOcba7-Gdl7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5dba22ea-ca2c-4f0d-cdeb-c35911f6e5ce"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabuada de 1:\n",
+            "1 x 1 = 1\n",
+            "1 x 2 = 2\n",
+            "1 x 3 = 3\n",
+            "1 x 4 = 4\n",
+            "1 x 5 = 5\n",
+            "1 x 6 = 6\n",
+            "1 x 7 = 7\n",
+            "1 x 8 = 8\n",
+            "1 x 9 = 9\n",
+            "1 x 10 = 10\n",
+            "-------------------\n",
+            "Tabuada de 2:\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n",
+            "2 x 10 = 20\n",
+            "-------------------\n",
+            "Tabuada de 3:\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "3 x 6 = 18\n",
+            "3 x 7 = 21\n",
+            "3 x 8 = 24\n",
+            "3 x 9 = 27\n",
+            "3 x 10 = 30\n",
+            "-------------------\n",
+            "Tabuada de 4:\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n",
+            "-------------------\n",
+            "Tabuada de 5:\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n",
+            "-------------------\n",
+            "Tabuada de 6:\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "6 x 7 = 42\n",
+            "6 x 8 = 48\n",
+            "6 x 9 = 54\n",
+            "6 x 10 = 60\n",
+            "-------------------\n",
+            "Tabuada de 7:\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "7 x 8 = 56\n",
+            "7 x 9 = 63\n",
+            "7 x 10 = 70\n",
+            "-------------------\n",
+            "Tabuada de 8:\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "8 x 9 = 72\n",
+            "8 x 10 = 80\n",
+            "-------------------\n",
+            "Tabuada de 9:\n",
+            "9 x 1 = 9\n",
+            "9 x 2 = 18\n",
+            "9 x 3 = 27\n",
+            "9 x 4 = 36\n",
+            "9 x 5 = 45\n",
+            "9 x 6 = 54\n",
+            "9 x 7 = 63\n",
+            "9 x 8 = 72\n",
+            "9 x 9 = 81\n",
+            "9 x 10 = 90\n",
+            "-------------------\n",
+            "Tabuada de 10:\n",
+            "10 x 1 = 10\n",
+            "10 x 2 = 20\n",
+            "10 x 3 = 30\n",
+            "10 x 4 = 40\n",
+            "10 x 5 = 50\n",
+            "10 x 6 = 60\n",
+            "10 x 7 = 70\n",
+            "10 x 8 = 80\n",
+            "10 x 9 = 90\n",
+            "10 x 10 = 100\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     }
   ]
 }
