--- a/Semana_6_e_7_Parte_II.ipynb
+++ b/Semana_6_e_7_Parte_II.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN38sFY/3+P6kykgDHzyML9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,51 +27,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jI8_nqzlE0n1",
-        "outputId": "b83836bf-6dc3-4438-d77f-3bc00186d93b"
+        "outputId": "c5261f9e-fad5-4a45-d6ed-fd3687c8a19f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Quantidade de pessoas: 12\n",
-            "Foi reservado 3 mesas para 12 pessoas\n",
-            "Ainda restam 2 mesas com 8 lugares.\n",
-            "Deseja continuar? (S/N)n\n",
-            "Xau!\n"
+            "Quantidade de pessoas: 15\n",
+            "Foi reservado 4 mesas para 15 pessoas\n",
+            "Ainda restam 1 mesas com 4 lugares.\n",
+            "Deseja continuar? (S/N) n\n",
+            "Tchau!\n"
           ]
         }
       ],
       "source": [
         "mesas = 5\n",
         "lugares = mesas * 4\n",
+        "\n",
         "while True:\n",
-        "  reservas = int(input('Quantidade de pessoas: '))\n",
-        "  if reservas <= lugares:\n",
-        "    if reservas%4 == 0:\n",
-        "      print(f'Foi reservado {reservas/4:.0f} mesas para {reservas} pessoas')\n",
-        "      mesas = mesas - (reservas/4)\n",
-        "      lugares -= reservas\n",
+        "    reservas = int(input('Quantidade de pessoas: '))\n",
+        "\n",
+        "    if reservas <= lugares:\n",
+        "        mesas_necessarias = reservas // 4\n",
+        "        if reservas % 4 != 0:\n",
+        "            mesas_necessarias += 1\n",
+        "            pessoas_ajustadas = mesas_necessarias * 4\n",
+        "        else:\n",
+        "            pessoas_ajustadas = reservas\n",
+        "\n",
+        "        if mesas_necessarias <= mesas:\n",
+        "            print(f'Foi reservado {mesas_necessarias} mesas para {reservas} pessoas')\n",
+        "            mesas -= mesas_necessarias\n",
+        "            lugares -= pessoas_ajustadas\n",
+        "            print(f'Ainda restam {mesas} mesas com {lugares} lugares.')\n",
+        "        else:\n",
+        "            print(f'Não há mesas suficientes para acomodar {reservas} pessoas.')\n",
+        "            print(f'Só restam {mesas} mesas com {lugares} lugares.')\n",
         "    else:\n",
-        "      print(f'Foi reservado {reservas/4+1:.0f} mesas para {reservas} pessoas')\n",
-        "      reservas = reservas + (4-(reservas%4))\n",
-        "      mesas = mesas - (reservas/4)\n",
-        "      lugares -= reservas\n",
-        "    print(f'Ainda restam {mesas:.0f} mesas com {lugares} lugares.')\n",
+        "        print(f'Não comporta, só restam {mesas} mesas com {lugares} lugares.')\n",
         "\n",
-        "  else:\n",
-        "    print(f'Não comporta, só restam {mesas:.0f} mesas com {lugares} lugares.')\n",
-        "\n",
-        "  opc = input('Deseja continuar? (S/N)')\n",
-        "  if opc.upper() == 'N':\n",
-        "    print('Xau!')\n",
-        "    break"
+        "    opc = input('Deseja continuar? (S/N) ')\n",
+        "    if opc.upper() == 'N':\n",
+        "        print('Tchau!')\n",
+        "        break\n"
       ]
     }
   ]
