--- a/Lista_de_Revisão_Semana_8_e_9_Revisão_de_Controle_de_Fluxo_17_04_a_25_04.ipynb
+++ b/Lista_de_Revisão_Semana_8_e_9_Revisão_de_Controle_de_Fluxo_17_04_a_25_04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRmFp0ebkAvtL1tjtHLjl/",
+      "authorship_tag": "ABX9TyOlKbuRXJXl0INrijc8QLSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,7 +261,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#11 Escreva um programa com for que leia um número inteiro e exiba a tabuada de multiplicação desse número de 1 até 10."
+        "#11 Escreva um programa com for que leia um número inteiro e exiba a tabuada de multiplicação desse número de 1 até 10.\n",
+        "number = int(input('Digite o número que queira tabular: '))\n",
+        "for i in range(1,11):\n",
+        "  print(f'{number} x {i} = {number*i}')"
       ],
       "metadata": {
         "id": "DvPszXbsjsPz"
@@ -272,13 +275,49 @@
     {
       "cell_type": "code",
       "source": [
-        "#12 Escreva um programa com while que simule um caixa eletrônico. Peça ao usuário o valor do saque (apenas valores múltiplos de 2) e calcule quantas notas de 50, 20, 10, 5 e 2 são necessárias. Não use listas. Mostre o total de cada nota usada."
+        "#12 Escreva um programa com while que simule um caixa eletrônico. Peça ao usuário o valor do saque (apenas valores múltiplos de 2) e calcule quantas notas de 50, 20, 10, 5 e 2 são necessárias. Não use listas. Mostre o total de cada nota usada.\n",
+        "valor = int(input('Digite o valor desejado (inteiro e múltiplo de 2): '))\n",
+        "cinquenta = 0\n",
+        "vinte = 0\n",
+        "dez = 0\n",
+        "cinco = 0\n",
+        "dois = 0\n",
+        "while valor>0:\n",
+        "  if valor%50 == 0:\n",
+        "    valor-=50\n",
+        "    cinquenta+=1\n",
+        "  elif valor%20 == 0:\n",
+        "    valor-=20\n",
+        "    vinte+=1\n",
+        "  elif valor%10 == 0:\n",
+        "    valor-=10\n",
+        "    dez+=1\n",
+        "  elif valor%5 == 0:\n",
+        "    valor-=5\n",
+        "    cinco+=1\n",
+        "  elif valor%2 == 0:\n",
+        "    valor-=2\n",
+        "    dois+=1\n",
+        "print(f'Saque: {cinquenta} notas de 50, {vinte} notas de 20, {dez} notas de 10, {cinco} notas de 5 e {dois} notas de 2.')"
       ],
       "metadata": {
-        "id": "yEceIhDmjsNj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yEceIhDmjsNj",
+        "outputId": "4aefbd04-5c82-41b5-c486-dd067a710253"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor desejado (inteiro e múltiplo de 2): 4888\n",
+            "Saque: 96 notas de 50, 4 notas de 20, 0 notas de 10, 0 notas de 5 e 4 notas de 2.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -364,6 +403,15 @@
       ],
       "metadata": {
         "id": "yLAwo_19jr17"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VzS31RU4x_dB"
       },
       "execution_count": null,
       "outputs": []
