--- a/Semana_12_e_13.ipynb
+++ b/Semana_12_e_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbNLnqwP/0rCGcIwQ4Cp8Y",
+      "authorship_tag": "ABX9TyN8EsNJ75FxmgJnJqK27Fpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,22 +112,10 @@
         "print(f'Média da lista: {media:.1f}') #Impressão"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HIpMOp7Ov_ri",
-        "outputId": "782b9d23-3c01-403a-be42-b2b8c27e63e7"
+        "id": "HIpMOp7Ov_ri"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Média da lista: 7.9\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -141,22 +129,10 @@
         "print(cont) #Ao fim de tudo, imprime quantos são maiores que 50."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lNffDhAfv_pD",
-        "outputId": "c19f56f8-dbf9-4a0e-d45a-bc98cd944201"
+        "id": "lNffDhAfv_pD"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -167,22 +143,10 @@
         "print(invertido) #imprime o vetor ordenado"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "urYOcY5-v_mq",
-        "outputId": "1fc4e98b-b737-4d37-a577-cc1f1abffdb7"
+        "id": "urYOcY5-v_mq"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[8, 3, 4, 7, 5, 2, 1]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -193,25 +157,13 @@
         "for n in numbers: #para cada item dos elementos\n",
         "  if numbers.count(n) > 1: #se a contagem for maior que 1\n",
         "    repetidos.append(n) #adiciona ao vetor de repetidos\n",
-        "print(set(repetidos)) #Set converte em conjunto e elimina os repetidos\n"
+        "print(list(set(repetidos))) #Set converte em conjunto e elimina os repetidos\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lR8F8vKVv_kC",
-        "outputId": "d093a95e-a0c5-44cf-9adf-ea831779c801"
+        "id": "lR8F8vKVv_kC"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{2, 3}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -229,22 +181,10 @@
         "print(inteiros) #imprime o vetor"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8WELBnnov_h1",
-        "outputId": "cdc5488c-aa8d-480c-c189-227850c6eb66"
+        "id": "8WELBnnov_h1"
       },
-      "execution_count": 121,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 17, 31, 37, 49, 51]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
