--- a/Semana_12_e_13.ipynb
+++ b/Semana_12_e_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8EsNJ75FxmgJnJqK27Fpq",
+      "authorship_tag": "ABX9TyNRPbMSLNKWZ9eC5u9eAQBZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,13 +206,52 @@
     {
       "cell_type": "code",
       "source": [
-        "#11 - Crie uma matriz 3x3 e preencha com valores fornecidos pelo usuário. Em seguida, exiba a matriz formatada.\n"
+        "#11 - Crie uma matriz 3x3 e preencha com valores fornecidos pelo usuário. Em seguida, exiba a matriz formatada.\n",
+        "matriz = [] #cria a matriz vazia\n",
+        "\n",
+        "for i in range(3): #Roda a quantidade de linhas da matriz\n",
+        "  lista = [] #Cria uma linha na matriz vazia\n",
+        "  for j in range(3): #Roda os elementos inserindo valor para cada linha/coluna\n",
+        "    num = int(input(f'Valor [{i}][{j}]:')) #Valor inserido pelo usuário\n",
+        "    lista.append(num) #adiciona o valor na linha\n",
+        "  matriz.append(lista) #adiciona linha na matriz\n",
+        "\n",
+        "\n",
+        "for i in range(3): #roda a linha\n",
+        "  for j in range(3): #roda a coluna\n",
+        "    print(matriz[i][j],end=' ') #imprime a linha\n",
+        "  print() #muda de linha\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "KUek9bgZv_cz"
+        "id": "KUek9bgZv_cz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8b38b9a6-c59e-4711-94a6-53f67a23617e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Valor [0][0]:1\n",
+            "Valor [0][1]:2\n",
+            "Valor [0][2]:3\n",
+            "Valor [1][0]:4\n",
+            "Valor [1][1]:5\n",
+            "Valor [1][2]:6\n",
+            "Valor [2][0]:7\n",
+            "Valor [2][1]:8\n",
+            "Valor [2][2]:9\n",
+            "1 2 3 \n",
+            "4 5 6 \n",
+            "7 8 9 \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
