--- a/Semana_12_e_13.ipynb
+++ b/Semana_12_e_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRPbMSLNKWZ9eC5u9eAQBZ",
+      "authorship_tag": "ABX9TyPXickHi/Fbnc0ksZJQp6it",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,41 +225,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "KUek9bgZv_cz",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8b38b9a6-c59e-4711-94a6-53f67a23617e"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Valor [0][0]:1\n",
-            "Valor [0][1]:2\n",
-            "Valor [0][2]:3\n",
-            "Valor [1][0]:4\n",
-            "Valor [1][1]:5\n",
-            "Valor [1][2]:6\n",
-            "Valor [2][0]:7\n",
-            "Valor [2][1]:8\n",
-            "Valor [2][2]:9\n",
-            "1 2 3 \n",
-            "4 5 6 \n",
-            "7 8 9 \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#12 - Gere uma matriz 4x4 com números aleatórios entre 1 e 20 e exiba a soma de todos os elementos."
-      ],
-      "metadata": {
-        "id": "Oiqgn4mBv_aK"
+        "id": "KUek9bgZv_cz"
       },
       "execution_count": null,
       "outputs": []
@@ -267,7 +233,50 @@
     {
       "cell_type": "code",
       "source": [
-        "#13 - Dada uma matriz 3x3 com números inteiros, exiba a soma dos elementos da diagonal principal."
+        "#12 - Gere uma matriz 4x4 com números aleatórios entre 1 e 20 e exiba a soma de todos os elementos.\n",
+        "import random\n",
+        "matriz = []\n",
+        "for i in range(4):\n",
+        "  linha = []\n",
+        "  for j in range(4):\n",
+        "    linha.append(random.randint(1,20))\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "soma = 0\n",
+        "for i in range(4):\n",
+        "  for j in range(4):\n",
+        "    print(matriz[i][j],end=' ')\n",
+        "    soma += matriz[i][j]\n",
+        "  print()\n",
+        "print(f'Soma da matriz: {soma}')\n",
+        ""
+      ],
+      "metadata": {
+        "id": "Oiqgn4mBv_aK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e437feea-9bab-4861-baf9-50b2d5f4b786"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15 7 9 2 \n",
+            "16 4 7 15 \n",
+            "10 3 14 12 \n",
+            "12 6 14 15 \n",
+            "Soma da matriz: 161\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#13 - Dada uma matriz 3x3 com números inteiros, exiba a soma dos elementos da diagonal principal.\n"
       ],
       "metadata": {
         "id": "N5oBWxnGv_Xa"
