--- a/Semana_12_e_13.ipynb
+++ b/Semana_12_e_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXickHi/Fbnc0ksZJQp6it",
+      "authorship_tag": "ABX9TyO/FkGUjftrJwHXqhkYN9jI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,13 +276,57 @@
     {
       "cell_type": "code",
       "source": [
-        "#13 - Dada uma matriz 3x3 com números inteiros, exiba a soma dos elementos da diagonal principal.\n"
+        "#13 - Dada uma matriz 3x3 com números inteiros, exiba a soma dos elementos da diagonal principal.\n",
+        "import random\n",
+        "matriz = []\n",
+        "for i in range(3):\n",
+        "  linha = []\n",
+        "  for j in range(3):\n",
+        "    linha.append(int(input('Valor:')))\n",
+        "  matriz.append(linha)\n",
+        "print()\n",
+        "\n",
+        "soma = 0\n",
+        "for i in range(3):\n",
+        "  for j in range(3):\n",
+        "    if i==j:\n",
+        "      print(f'\\033[1m{matriz[i][j]}\\033[0m',end=' ')\n",
+        "      soma += matriz[i][j]\n",
+        "    else:\n",
+        "      print(matriz[i][j],end=' ')\n",
+        "  print()\n",
+        "print(f'Soma da diagonal da matriz: {soma}')"
       ],
       "metadata": {
-        "id": "N5oBWxnGv_Xa"
+        "id": "N5oBWxnGv_Xa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e1860623-d76d-4944-b601-bd57163d2151"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Valor:15\n",
+            "Valor:17\n",
+            "Valor:19\n",
+            "Valor:21\n",
+            "Valor:23\n",
+            "Valor:25\n",
+            "Valor:27\n",
+            "Valor:29\n",
+            "Valor:31\n",
+            "\n",
+            "\u001b[1m15\u001b[0m 17 19 \n",
+            "21 \u001b[1m23\u001b[0m 25 \n",
+            "27 29 \u001b[1m31\u001b[0m \n",
+            "Soma da diagonal da matriz: 69\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
