--- a/Semana_12_e_13.ipynb
+++ b/Semana_12_e_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/FkGUjftrJwHXqhkYN9jI",
+      "authorship_tag": "ABX9TyM9Jpka61P0CqzwRUrewqAn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -295,35 +295,36 @@
         "    else:\n",
         "      print(matriz[i][j],end=' ')\n",
         "  print()\n",
-        "print(f'Soma da diagonal da matriz: {soma}')"
+        "print(f'\\nSoma da diagonal da matriz: {soma}')"
       ],
       "metadata": {
         "id": "N5oBWxnGv_Xa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1860623-d76d-4944-b601-bd57163d2151"
+        "outputId": "7ec640d3-92eb-475e-8824-0504745c3bfc"
       },
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Valor:15\n",
+            "Valor:16\n",
             "Valor:17\n",
             "Valor:19\n",
+            "Valor:20\n",
             "Valor:21\n",
-            "Valor:23\n",
-            "Valor:25\n",
-            "Valor:27\n",
-            "Valor:29\n",
             "Valor:31\n",
+            "Valor:23\n",
+            "Valor:32\n",
             "\n",
-            "\u001b[1m15\u001b[0m 17 19 \n",
-            "21 \u001b[1m23\u001b[0m 25 \n",
-            "27 29 \u001b[1m31\u001b[0m \n",
-            "Soma da diagonal da matriz: 69\n"
+            "\u001b[1m15\u001b[0m 16 17 \n",
+            "19 \u001b[1m20\u001b[0m 21 \n",
+            "31 23 \u001b[1m32\u001b[0m \n",
+            "\n",
+            "Soma da diagonal da matriz: 67\n"
           ]
         }
       ]
@@ -331,13 +332,53 @@
     {
       "cell_type": "code",
       "source": [
-        "#14 - Leia uma matriz 2x3 e uma matriz 3x2. Em seguida, calcule e exiba a matriz produto (multiplicação de matrizes)."
+        "#14 - Leia uma matriz 2x3 e uma matriz 3x2. Em seguida, calcule e exiba a matriz produto (multiplicação de matrizes).\n",
+        "import random\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "\n",
+        "def cria_matriz(x,y):\n",
+        "  matriz = []\n",
+        "  for i in range(x):\n",
+        "    linha = []\n",
+        "    for j in range(y):\n",
+        "      linha.append(random.randint(0,100))\n",
+        "    matriz.append(linha)\n",
+        "  return matriz\n",
+        "\n",
+        "m1 = cria_matriz(2,3)\n",
+        "m2 = cria_matriz(3,2)\n",
+        "imprime_matriz(m1,2,3)\n",
+        "imprime_matriz(m2,3,2)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "zR45QJz8v_U6"
+        "id": "zR45QJz8v_U6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e428d16-afd8-49d8-c477-3fa0b99e39fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "31 84 85 \n",
+            "30 2 59 \n",
+            "\n",
+            "12 62 \n",
+            "21 50 \n",
+            "54 92 \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
