--- a/Semana_12_e_13.ipynb
+++ b/Semana_12_e_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9Jpka61P0CqzwRUrewqAn",
+      "authorship_tag": "ABX9TyNlcEV/WFsT8lrxIE5olkNY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,8 +248,7 @@
         "    print(matriz[i][j],end=' ')\n",
         "    soma += matriz[i][j]\n",
         "  print()\n",
-        "print(f'Soma da matriz: {soma}')\n",
-        ""
+        "print(f'Soma da matriz: {soma}')\n"
       ],
       "metadata": {
         "id": "Oiqgn4mBv_aK",
@@ -258,7 +257,7 @@
         },
         "outputId": "e437feea-9bab-4861-baf9-50b2d5f4b786"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +303,7 @@
         },
         "outputId": "7ec640d3-92eb-475e-8824-0504745c3bfc"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +362,7 @@
         },
         "outputId": "1e428d16-afd8-49d8-c477-3fa0b99e39fd"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,68 +382,308 @@
     {
       "cell_type": "code",
       "source": [
-        "#15 - Crie uma matriz 3x3 com valores inteiros. Conte quantos números pares ela possui."
+        "#15 - Crie uma matriz 3x3 com valores inteiros. Conte quantos números pares ela possui.\n",
+        "import random\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "\n",
+        "matriz = []\n",
+        "for i in range(3):\n",
+        "  linha = []\n",
+        "  for j in range(3):\n",
+        "    linha.append(random.randint(0,100))\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "imprime_matriz(matriz,3,3)\n",
+        "\n",
+        "cont = 0\n",
+        "for i in range(3):\n",
+        "  for j in range(3):\n",
+        "    if matriz[i][j]%2 == 0:\n",
+        "      cont+=1\n",
+        "print(f'Quantidade de pares: {cont}')"
       ],
       "metadata": {
-        "id": "XfRdObjRv_SS"
+        "id": "XfRdObjRv_SS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e12add80-6a83-4a0e-e444-bd5602e6bfbd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "53 88 66 \n",
+            "54 9 83 \n",
+            "63 17 10 \n",
+            "\n",
+            "Quantidade de pares: 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#16 - Gere uma matriz 5x5 onde cada elemento seja igual à soma de sua linha e coluna (i + j)."
+        "#16 - Gere uma matriz 5x5 onde cada elemento seja igual à soma de sua linha e coluna (i + j).\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "matriz = []\n",
+        "for i in range(5):\n",
+        "  linha = []\n",
+        "  for j in range(5):\n",
+        "    linha.append(i+j)\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "imprime_matriz(matriz,5,5)\n"
       ],
       "metadata": {
-        "id": "iFWRkjcEv_Pq"
+        "id": "iFWRkjcEv_Pq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29eeca4e-70b7-4998-ab99-3291d7626120"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 2 3 4 \n",
+            "1 2 3 4 5 \n",
+            "2 3 4 5 6 \n",
+            "3 4 5 6 7 \n",
+            "4 5 6 7 8 \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#17 - Dada uma matriz 4x4, encontre e exiba o maior elemento da matriz e sua posição (linha, coluna)."
+        "#17 - Dada uma matriz 4x4, encontre e exiba o maior elemento da matriz e sua posição (linha, coluna).\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "matriz = []\n",
+        "for i in range(4):\n",
+        "  linha = []\n",
+        "  for j in range(4):\n",
+        "    linha.append(random.randint(0,100))\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "imprime_matriz(matriz,4,4)\n",
+        "\n",
+        "maior = matriz[0][0]\n",
+        "for i in range(4):\n",
+        "  for j in range(4):\n",
+        "    if matriz[i][j] > maior:\n",
+        "      maior = matriz[i][j]\n",
+        "      linha = i\n",
+        "      coluna = j\n",
+        "print(f'Maior valor: {maior} | Posição: [{linha}][{coluna}]')"
       ],
       "metadata": {
-        "id": "QURDFfq7v_NC"
+        "id": "QURDFfq7v_NC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a160f5b4-7825-4238-ddd6-c603fba858b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14 50 71 91 \n",
+            "76 46 12 99 \n",
+            "76 39 94 100 \n",
+            "72 83 5 85 \n",
+            "\n",
+            "Maior valor: 100 | Posição: [2][3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#18 - Crie uma matriz identidade de ordem 4 (1s na diagonal principal e 0s no restante)."
+        "#18 - Crie uma matriz identidade de ordem 4 (1s na diagonal principal e 0s no restante).\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "\n",
+        "matriz = []\n",
+        "for i in range(4):\n",
+        "  linha = []\n",
+        "  for j in range(4):\n",
+        "    if i==j:\n",
+        "      linha.append(1)\n",
+        "    else:\n",
+        "      linha.append(0)\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "imprime_matriz(matriz,4,4)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "HLBGWMOkv_Ki"
+        "id": "HLBGWMOkv_Ki",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4ac9c968-b14e-4db9-f248-268671b03259"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 0 0 0 \n",
+            "0 1 0 0 \n",
+            "0 0 1 0 \n",
+            "0 0 0 1 \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#19 - Leia uma matriz 3x3 e exiba sua transposta (troca de linhas por colunas)."
+        "#19 - Leia uma matriz 3x3 e exiba sua transposta (troca de linhas por colunas).\n",
+        "import random\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "\n",
+        "matriz = []\n",
+        "for i in range(3):\n",
+        "  linha = []\n",
+        "  for j in range(3):\n",
+        "    linha.append(random.randint(0,100))\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "imprime_matriz(matriz,3,3)\n",
+        "\n",
+        "print('Transposta:')\n",
+        "for i in range(3):\n",
+        "  for j in range(3):\n",
+        "    print(matriz[j][i],end=' ')\n",
+        "  print()"
       ],
       "metadata": {
-        "id": "QnSFdYD0v_Hq"
+        "id": "QnSFdYD0v_Hq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bdbc08b9-1048-486b-bc26-cfc559875968"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "77 36 40 \n",
+            "32 48 38 \n",
+            "79 84 64 \n",
+            "\n",
+            "Transposta:\n",
+            "77 32 79 \n",
+            "36 48 84 \n",
+            "40 38 64 \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#20 - Crie uma matriz 3x3 com valores fornecidos pelo usuário e verifique se ela é simétrica (igual à sua transposta)."
+        "#20 - Crie uma matriz 3x3 com valores fornecidos pelo usuário e verifique se ela é simétrica (igual à sua transposta).\n",
+        "import random\n",
+        "def imprime_matriz(matriz,x,y):\n",
+        "  for i in range(x): #roda a linha\n",
+        "    for j in range(y): #roda a coluna\n",
+        "      print(matriz[i][j],end=' ') #imprime a linha\n",
+        "    print() #muda de linha\n",
+        "  print()\n",
+        "\n",
+        "matriz = []\n",
+        "for i in range(3):\n",
+        "  linha = []\n",
+        "  for j in range(3):\n",
+        "    linha.append(random.randint(0,100))\n",
+        "  matriz.append(linha)\n",
+        "\n",
+        "imprime_matriz(matriz,3,3)\n",
+        "\n",
+        "print('Transposta:')\n",
+        "for i in range(3):\n",
+        "  for j in range(3):\n",
+        "    print(matriz[j][i],end=' ')\n",
+        "  print()\n",
+        "\n",
+        "for i in range(3):\n",
+        "  for j in range(3):\n",
+        "    if matriz[i][j] != matriz[j][i]:\n",
+        "      print('\\nNão é simétrica')\n",
+        "      break\n",
+        "    else:\n",
+        "      print('\\nÉ simétrica')\n",
+        "  break"
       ],
       "metadata": {
-        "id": "YYzRZShwv-rq"
+        "id": "YYzRZShwv-rq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39e931a2-d191-465f-f4c2-9200ac33b47f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "29 59 40 \n",
+            "8 14 98 \n",
+            "47 52 52 \n",
+            "\n",
+            "Transposta:\n",
+            "29 8 47 \n",
+            "59 14 52 \n",
+            "40 98 52 \n",
+            "\n",
+            "É simétrica\n",
+            "\n",
+            "Não é simétrica\n"
+          ]
+        }
+      ]
     }
   ]
 }
